need to fix verification
